--- a/sass/layout/_advert.scss
+++ b/sass/layout/_advert.scss
@@ -6,6 +6,11 @@
 
     &-box {
       @include gridbox;
+
+      & > .advert_img {
+        max-width: 100%;
+        height: auto;
+      }
     }
   }
 }
